--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,7 @@
 <html>
 <head>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"> </script>
-    <script type="text/javascript" src="js/accessUsers.json"> </script>
-    <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <script type="text/javascript" src="./js/Server/accessUsers.json"></script>
+    <link rel="stylesheet" type="text/css" href="./css/indexstyle.css">
     <title>
     Biggest Tech Company
     </title>
